@@ -1,37 +1,23 @@
+from Testing import ZopeTestCase as ztc
 from Products.Five import zcml
 from Products.Five import fiveconfigure
-
-from Testing import ZopeTestCase as ztc
-
 from Products.PloneTestCase import PloneTestCase as ptc
 from Products.PloneTestCase.layer import onsetup
 
 @onsetup
-def setup_product():
-    """Set up additional products and ZCML required to test this product.
-    
-    The @onsetup decorator causes the execution of this body to be deferred
-    until the setup of the Plone site testing layer.
-    """
-    
-    # Load the ZCML configuration for this package and its dependencies
-    
+def setup_package():
     fiveconfigure.debug_mode = True
     import plone.portlet.static
     zcml.load_config('configure.zcml', plone.portlet.static)
     fiveconfigure.debug_mode = False
-    
-    # We need to tell the testing framework that these products
-    # should be available. This can't happen until after we have loaded
-    # the ZCML.
-    
     ztc.installPackage('plone.portlet.static')
-    
-# The order here is important: We first call the deferred function and then 
-# let PloneTestCase install it during Plone site setup
 
-setup_product()
-ptc.setupPloneSite(products=['plone.portlet.static'])
+setup_package()
+ptc.setupPloneSite(extension_profiles=(
+    'Products.ATContentTypes:default',
+    'plone.app.portlets:default',
+    'plone.portlet.static:default',
+))
 
 class TestCase(ptc.PloneTestCase):
     """Base class used for test cases
